# Junior

./: .gitignore  .travis.yml  Junior.cabal  LambdaExpressionParser.hs  Main.hs  Parser.hs  README.md  Tests.hs  jnr.sh  recompileCompiler.sh  run.command
jnr/: Code.jnr  CodeV2.jnr  CodeV3.jnr  Sample.jnr
jnr/CodeV4/: Base.jnr  CodeGenerator.jnr  Main.jnr  Parser.jnr  TypeInference.jnr
js/: CodeV10.js  CodeV2.js  CodeV3.js  CodeV5.js  CodeV7.js  CodeV8.js  CodeV9.js  CompileHelper.js  Externals.js  Sample.js
js/CodeV4/: Base.js  CodeGenerator.js  Externals.js  Main.js  Parser.js  TypeInference.js  TypesExternals.js
js/CodeV5/: CodeGenerator.js  Main.js  Parser.js
src/: AlphaConverter.hs  ArithmeticExpressionParser.hs  Ast.hs  Base.hs  BaseParsers.hs  Code.jnr  CodeV2.jnr  CodeV3.jnr  CodeV3.js  CompileHelper.js  Environments.hs  Expr.hs  Externals.js  Interpreter.hs  JuniorParser.hs  JuniorTypeChecker.hs  LambdaExpressionParser.hs  Lib.hs  Main.hs  Parser.hs  Primitives.hs  RecursionSchemes.hs  Sample.jnr  Sample.js  Substitutions.hs  TypeTree.hs  Unification.hs  Utils.hs  bin.js  bin2.js  sample.hs
src/Compiler/: Ast.hs  AstF.hs  Rec.hs
src/Compiler/Interpreter/: ClosureConversion.hs  ExprFreeVar.hs  ExprInterpreter.hs  JuniorInterpreter.hs
src/Compiler/Parser/: BaseParsers.hs  JuniorParser.hs
src/Compiler/Transformations/: AstClosure.hs  FreeVar.hs
src/Compiler/TypeInference/: AlphaConverter.hs  Environments.hs  (+4 more)
src/experiments/: Ast.hs  BaseParsers.hs  Code.foo  Code.jnr  Main.hs  Parser.hs  RecursionSchemes.hs
tests/: Tests.hs  TestsUtils.hs
(+3 files in other folders)
