name:                Junior
version:             0.1.0.0
synopsis:            Simple Functional Language
description:         Simple Functional Language
homepage:            https://github.com/holoed/Junior
license:             Apache-2.0
license-file:        LICENSE
author:              Edmondo Pentangelo
maintainer:          edmondo@gmail.com
copyright:           2015, Edmondo Pentangelo
category:            Development
build-type:          Custom
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/Junior/Junior.git

flag DevelopmentMode
  Default: False

executable Junior
  ghc-options: -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base,
                       mtl,
                       transformers,
                       containers,
                       text
  default-language:    Haskell2010

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests, src
  build-depends:       base,
                       mtl,
                       transformers,
                       containers,
                       text,
                       hspec == 2.*
  default-language:    Haskell2010
